[package]
name = "rekey_common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.31"
directories = "5.0.1"

[dependencies.windows]
version = "0.51.1"
features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]
