[package]
name = "rekey"
version = "0.1.0"
edition = "2021"

[dependencies]
boa_engine = "0.17.3"
boa_gc = "0.17.3"
directories = "5.0.1"
lazy_static = "1.4.0"
rekey_common = { path = "../rekey_common/", version = "0.1.0" }
rustc-hash = { version = "1.1.0", features = ["std"] }

[dependencies.windows]
version = "0.51.1"
features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input",
  "Win32_System_Threading",
  "Win32_Graphics_Gdi",
]
